--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <main>
-            
+            <h1>Our Team</h1>
         </main>
         <!-- Script -->
-        <script type="text/javascript"></script>
+        <script type="text/javascript" src="js/script.js"></script>
     </body>
 </html>
