--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <main>
             <h1>Our Team</h1>
+            <section></section>
         </main>
         <!-- Script -->
         <script type="text/javascript" src="js/script.js"></script>
